Added intro to namespace

--- a/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
+++ b/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables\n",
+    "# 6.1 Variables\n",
     "\n",
     "Variables are reserved memory locations to store values.\n",
     "Every variable in Python is an object."
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1 Identifier Naming Rules\n",
+    "## 6.1.1 Identifier Naming Rules\n",
     "\n",
     "- (a) Variables names must start with a letter or an underscore, such as:\n",
     "    - variable\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2 Reserved Words\n",
+    "## 6.1.2 Reserved Words\n",
     "\n",
     "The following identifiers are used as reserved words, or keywords of the language, and __cannot__ be used as ordinary identifiers. They must be spelled exactly as written here:"
    ]
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3 Naming Conventions\n",
+    "## 6.1.3 Naming Conventions\n",
     "\n",
     ">Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
     "\n",
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4 Multiple Assignment\n",
+    "## 6.1.4 Multiple Assignment\n",
     "\n",
     "Python allows you to assign a single value to several variables simultaneously."
    ]
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.1 Re-assigning of Variables"
+    "## 6.1.4.1 Re-assigning of Variables"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
+    "## 6.1.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
     "\n",
     "\n",
     "All comparison operations in Python have the same priority, which is lower than that of any arithmetic, shifting or bitwise operation. \n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.6 Data Types\n",
+    "## 6.1.6 Data Types\n",
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Numbers (immutable)\n",
+    "### 6.1.6.1. Numbers (immutable)\n",
     "\n",
     "Number data types store numeric values. Number objects are created when you assign a value to them. \n",
     "\n",
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. String (immutable)\n",
+    "### 6.1.6.2.  String (immutable)\n",
     "\n",
     "- Strings in Python are identified as a contiguous set of characters represented in the quotation marks. \n",
     "\n",
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. List (mutable)\n",
+    "### 6.1.6.3.  List (mutable)\n",
     "\n",
     "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets (__`[]`__).\n",
     "\n",
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Tuples (immutable)\n",
+    "### 6.1.6.4.  Tuples (immutable)\n",
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Dictionary (mutable)"
+    "### 6.1.6.5.  Dictionary (mutable)"
    ]
   },
   {
@@ -517,6 +517,80 @@
    "metadata": {},
    "source": [
     "Dictionaries have <b>no concept of order</b> among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.1.7 Namespace\n",
+    "\n",
+    "Generally speaking, a namespace (sometimes also called a context) is a naming system for making names unique to avoid ambiguity. \n",
+    "\n",
+    "Namespaces are containers for mapping names to objects. Everything in Python - _literals, lists, dictionaries, functions, classes, etc._ - is an object.\n",
+    "\n",
+    "Such a “name-to-object” mapping allows us to access an object by a name that we’ve assigned to it. For example, if we make a simple string assignment like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a_string = \"Hello String\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We created a reference to the __`\"Hello string\"`__ object, and therefore, we can access via its variable name __`a_string`__.\n",
+    "\n",
+    "We can picture a namespace as a Python dictionary structure, where the dictionary keys represent the names and the dictionary values the object itself (and this is also how namespaces are currently implemented in Python)\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a_namespace = {'name_a':object_1, 'name_b':object_2, ...}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the tricky part is that we have multiple independent namespaces in Python, and names can be reused for different namespaces (only the objects are unique, for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a_namespace = {'name_a':object_1, 'name_b':object_2, ...}\n",
+    "b_namespace = {'name_a':object_3, 'name_b':object_4, ...}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, everytime we call a `for-loop` or define a function, it will create its own namespace.\n",
+    "\n",
+    "We'll tackle more about namespace in the later part of this tutorial."
    ]
   }
  ],
