Fixed numbering and added tuple methods

--- a/Beginner_2/6.6 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Tuples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.5 Tuples\n",
+    "# 6.6 Tuples\n",
     "\n",
     "A tuple is a sequence of __immutable__ Python objects. By __immutable__, it means that tuples __CANNOT__ be changed once created. They hold an __ordered__ collection of values which can be of any type.\n",
     "\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5.1 Accessing Values in a Tuple\n",
+    "## 6.6.1 Accessing Values in a Tuple\n",
     "\n",
     "In accessing values in a tuple, it is also similar to other data types such as lists. Use the square brackets for slicing along with the index or indices to obtain value available at that index.\n",
     "\n",
@@ -114,12 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5.2 Methods\n",
+    "## 6.6.2 Methods\n",
     "\n",
     "Since tuples are immutable (cannot be changed), there are fewer methods available.\n",
     "\n",
-    "### `len()`\n",
-    "> The method `len()` returns the number of elements in the tuple.\n",
+    "### len()\n",
+    "> The method `__len()__` returns the number of elements in the tuple.\n",
     "\n",
     "For example:"
    ]
@@ -133,9 +133,9 @@
    "outputs": [],
    "source": [
     "# Run the Code\n",
-    "my_tuple = (1,2,3,4,5)\n",
+    "tuple1 = (1,2,3,4,5)\n",
     "\n",
-    "len(my_tuple)"
+    "len(tuple1)"
    ]
   },
   {
@@ -144,48 +144,20 @@
     "collapsed": true
    },
    "source": [
-    "### `count()`\n",
-    "> The method `count()` returns count of how many times the `obj` occurs in tuple.\n",
+    "### count()\n",
+    "> \n",
     "\n",
     "For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Run the code\n",
-    "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
-    "\n",
-    "print(my_tuple.count('apple'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `index()`\n",
-    "> The method `index()` returns the __lowest index__ in a tuple that the `obj` appears.\n",
+    "### index()\n",
+    "> \n",
     "\n",
     "For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Run the code\n",
-    "my_tuple = ('apple', 'banana', 'apple', 'orange','banana');\n",
-    "\n",
-    "print(my_tuple.index('banana'))"
    ]
   }
  ],
