--- a/Beginner_3/8. Conditional Statements and Expressions.ipynb
+++ b/Beginner_3/8. Conditional Statements and Expressions.ipynb
@@ -6,13 +6,8 @@
    "source": [
     "# 8.1 If... elif... else\n",
     "\n",
-    "Python's [`if`](https://docs.python.org/3.5/reference/compound_stmts.html#if) keyword can be used as part of a statement or as part of an expression."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Python's [`if`](https://docs.python.org/3.5/reference/compound_stmts.html#if) keyword can be used as part of a statement or as part of an expression.\n",
+    "\n",
     "## 8.1.1 [Conditional statement](https://docs.python.org/3.5/tutorial/controlflow.html#if-statements):"
    ]
   },
@@ -24,31 +19,29 @@
    },
    "outputs": [],
    "source": [
-    "x = int(input(\"Please enter an integer: \"))\n",
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input(\"Please enter an integer: \"))\n",
+    "        if x < 0:\n",
+    "            print('Less than zero')\n",
+    "        elif x == 0:\n",
+    "            print('Zero')\n",
+    "        elif x > 0:\n",
+    "            print('Greater than zero')\n",
     "\n",
-    "if x < 0:\n",
-    "    print('Less than zero')\n",
-    "elif x == 0:\n",
-    "    print('Zero')\n",
-    "elif x == 1:\n",
-    "    print('One')\n",
-    "else:\n",
-    "    print('More than one')\n",
+    "        print(\"x = \", x)\n",
     "\n",
-    "print(\"x = \", x)"
+    "    except ValueError as e:\n",
+    "        print('It\\'s something else...', e)\n",
+    "        break"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example uses `if` as a statement. For more than one condition, `elif` is used. `elif`, instead of \"else if\" is optional and can appear zero or as many times as needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This example uses `if` as a statement. For more than one condition, __`elif`__ instead of \"else if\" is used. `elif` is optional and can appear zero or as many times as needed.\n",
+    "\n",
     "## 8.1.2 [Conditional expression](https://docs.python.org/3.5/reference/expressions.html#conditional-expressions):"
    ]
   },
@@ -60,37 +53,22 @@
    },
    "outputs": [],
    "source": [
-    "cat = False\n",
-    "print(\"Meow!\") if cat else print(\"Squeak!\")"
+    "cat = []\n",
+    "print(\"Meow!\") if cat else print(\"Mouse will play!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This syntax is more commonly known in other languages as a \"ternary operation\" (there's no `?` operator in this case)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are other places where you can find the `if` keyword but for now, it's enough to know how to incorporate conditional logic in your code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This syntax is more commonly known in other languages as a \"ternary operation\" (there's no `?` operator in this case).\n",
+    "\n",
+    "There are other places where you can find the `if` keyword but for now, it's enough to know how to incorporate conditional logic in your code.\n",
+    "\n",
     "## 8.2 [Truth Value Testing](https://docs.python.org/3.5/library/stdtypes.html#truth-value-testing)\n",
     "\n",
-    "Be aware that when checking for value, Python's various types have values equivalent to False:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Be aware that when checking for value, Python's various types have values equivalent to being _Falsy_:\n",
+    "\n",
     "> Any object can be tested for truth value, for use in an if or while condition or as operand of the Boolean operations below. The following values are considered false:\n",
     "\n",
     "> * None\n",
@@ -102,24 +80,11 @@
     "\n",
     "> All other values are considered true — so objects of many types are always true.\n",
     "\n",
-    "> Operations and built-in functions that have a Boolean result always return 0 or False for false and 1 or True for true, unless otherwise stated. (Important exception: the Boolean operations or and and always return one of their operands.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Depending on your code, the following statements may have different effects:\n",
+    "> Operations and built-in functions that have a Boolean result always return 0 or False for false and 1 or True for true, unless otherwise stated. (Important exception: the Boolean operations or and and always return one of their operands.)\n",
     "\n",
-    "`if cat:`\n",
+    "Keep in mind that Truth Value Testing is not the same as comparing the value to __`True`__ or __`False`__. Truth value is tested not when `a_variable == True` but when a conditional statement evaluates it as truthy.\n",
     "\n",
-    "`if cat is not None:`\n",
-    "\n",
-    "The first one evalues as `False` when the value of cat is one of the values listed in the Truth Value Testing section above. If so, the indented block of code under `if cat:` will not happen.\n",
-    "\n",
-    "The second one compares against Python's constant `None`. For as long as the variable has a value and the value is not `None`, the statement will evaluate as `True` even if the value is 0, False, or empty iterables.\n",
-    "\n",
-    "Compare the code below to the previous one and see how the outcome differs."
+    "None of the following are truthy:"
    ]
   },
   {
@@ -130,15 +95,134 @@
    },
    "outputs": [],
    "source": [
-    "cat = False\n",
-    "print(\"Meow!\") if cat is not None else print(\"Squeak!\")"
+    "falsies = [\n",
+    "    0,\n",
+    "    '',\n",
+    "    [],\n",
+    "    (),\n",
+    "    {},\n",
+    "    False,\n",
+    "    None,\n",
+    "]\n",
+    "\n",
+    "for falsy_variable in falsies:\n",
+    "    if falsy_variable:\n",
+    "        print(\"{} is Truthy\".format(falsy_variable))\n",
+    "    else:\n",
+    "        print(\"{} is Falsy\".format(falsy_variable))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.3 `==` vs `is`, and [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
+    "How does one check for zero, empty lists/tuples/sets/dictionaries and False?\n",
+    "\n",
+    "use __`is not None:`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cat = []\n",
+    "print(\"Meow!\") if cat is not None else print(\"Mouse will play!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first statement, __`if cat`__, evaluates as _truthy_ when the value of cat is none of the mentioned _falsy_ values.\n",
+    "\n",
+    "The second statement compares against Python's constant `None`, specifically, the value of __`if cat is not None`__. For as long as the __variable has a value__ and the __value is not `None`__, the statement will evaluate as _truthy_ even if the value is 0, False, or empty iterables.\n",
+    "\n",
+    "## 8.3 [Boolean Operations — and, or, not](https://docs.python.org/3.5/library/stdtypes.html#boolean-operations-and-or-not)\n",
+    "\n",
+    "These are the Boolean operations, ordered by ascending priority:\n",
+    "\n",
+    "| Operation | Result | Notes |\n",
+    "|-----------|--------|-------|\n",
+    "|x or y | if x is false, then y, else x | Short-circuit operator, only evaluates the second argument if the first one is False.\n",
+    "|x and y | if x is false, then x, else y | Short-circuit operator, only evaluates the second argument if the first one is True.\n",
+    "|not x | if x is false, then True, else False | lower priority than non-Boolean operators, `not a == b` is interpreted as `not (a == b)`, and `a == not b` is a syntax error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "False and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "not True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.4 `==` vs `is`, and [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
     "\n",
     "`==` checks for value equality.\n",
     "\n",
@@ -147,6 +231,50 @@
     "Python's `None` is a constant singleton. New instances can't be created. It is a type on it's own - `NoneType` and we can't modify it in any way, for example, by adding or changing attributes or by assigning a new value to `None`.\n",
     "\n",
     "Checking the reference to `None` using `is` works because there is always only one `None` instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "0 is '' is [] is () is {} is False is None  # false, they don't have the same identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "0 == '' == [] == () == {} == False == None  # false, they don't have the same value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(not 0) is (not '') is (not []) is (not ()) is (not {}) is (not False) is (not None)  # true, they are all falsy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(not 0) == (not '') == (not []) == (not ()) == (not {}) == (not False) == (not None)  # true, all falsies are equal"
    ]
   }
  ],
