--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -4,36 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.4 Strings \n",
+    "# 6.3 Strings \n",
     "\n",
     "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place.\n",
     "\n",
     "### Strings in Python 2.x vs. Strings in Python 3.x\n",
+    "\n",
     "Python 2.x and 3.x both have two types of strings:\n",
     "\n",
+    "> - __byte sequences__, which have to be __literal characters__ from the __ASCII alphabet__.\n",
     "\n",
-    "> - __byte sequences__, which have to be __literal characters__ from the __ASCII alphabet__. \n",
+    "> - __Unicode strings__, which can hold onto almost any character you want to put in there.\n",
     "\n",
-    "> - __Unicode strings__, which can hold onto almost any character you want to put in there. \n",
-    "\n",
-    "In Unicode, you can include other languages, and with the right encoding, emoji. \n",
-    "\n",
+    "In Unicode, you can include other languages, and with the right encoding, emoji.\n",
     "\n",
     "__Python 2.x__ :\n",
+    "\n",
     ">You had to mark every single Unicode string with a u at the beginning, like __`u'Hello'`__. You have to use Unicode strings all the time! (If you forget the __`u`__, you will have a byte sequence instead.\n",
     "\n",
+    "__Python 3.x__ :\n",
     "\n",
-    "__Python 3.x__ :  \n",
     ">All strings are now Unicode by default and you have to mark byte sequences with __`b`__. Using Unicode is a much more common scenario so it has reduced development time for everyone that does Python 3.x.\n",
     "\n",
-    "If you have or want to support both, you can still mark strings with u in Python 3.x."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.4.1 Quotations\n",
+    "If you have or want to support both, you can still mark strings with u in Python 3.x.\n",
+    "\n",
+    "## 6.3.1 Quotations\n",
     "\n",
     "Strings are amongst the most popular types in Python. We can create them simply by enclosing characters in quotes. Python treats single quotes the same as double quotes.\n",
     "\n",
@@ -96,14 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may escape the apostrophe (__`'`__) using a backslash (__`\\`__) as seen on the example above. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.4.2 Escape characters\n",
+    "You may escape the apostrophe (__`'`__) using a backslash (__`\\`__) as seen on the example above. \n",
+    "\n",
+    "## 6.3.2 Escape characters\n",
     "\n",
     "This __`\\`__ (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
     "\n",
@@ -137,13 +127,8 @@
     "\n",
     "These are the escape sequences Python supports:\n",
     "\n",
-    "![Beginner_2](./images/img_escape_characters.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![Beginner_2](./images/img_escape_characters.png)\n",
+    "\n",
     "Here are some examples. Run the code to see the result:"
    ]
   },
@@ -212,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.3 Methods \n",
+    "## 6.3.3 Methods \n",
     "\n",
     "Here are a few useful methods for strings:\n",
     "\n",
@@ -281,13 +266,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the example above, it didn't count the 'O' in Oscar, because it is in case sensitive, Meaning 'O' is different from 'o'."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "On the example above, it didn't count the 'O' in Oscar, because it is in case sensitive, Meaning 'O' is different from 'o'.\n",
+    "\n",
     "### `.find()`\n",
     "\n",
     "We use __`.find()`__ to search for a specific character/s in a string.\n",
@@ -313,13 +293,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results tell us that “hand” begins at the 13th position in the sequence."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The results tell us that “hand” begins at the 13th position in the sequence.\n",
+    "\n",
     "### `.replace()`\n",
     "\n",
     "The method __`replace()`__ returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
@@ -410,24 +385,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is the list of complete set of symbols which can be used along with __`%`__:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Beginner_2](./images/img_string_formatting.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Here is the list of complete set of symbols which can be used along with __`%`__:\n",
+    "\n",
+    "![Beginner_2](./images/img_string_formatting.png)\n",
+    "\n",
     "### .format()\n",
     "\n",
-    "With new style formatting it is possible to give placeholders an explicit positional index.\n",
-    "This allows for re-arranging the order of display without changing the arguments."
+    "With new style formatting it is possible to give placeholders an explicit positional index. This allows for re-arranging the order of display without changing the arguments."
    ]
   },
   {
