--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -70,13 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Like string indices, tuple indices start at 0, and they can be sliced, concatenated, and so on."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Like string indices, tuple indices start at 0, and they can be sliced, concatenated, and so on.\n",
+    "\n",
     "## 6.5.1 Accessing Values in a Tuple\n",
     "\n",
     "In accessing values in a tuple, it is also similar to other data types such as lists. Use the square brackets for slicing along with the index or indices to obtain value available at that index.\n",
@@ -119,6 +114,7 @@
     "Since tuples are immutable (cannot be changed), there are fewer methods available.\n",
     "\n",
     "### `len()`\n",
+    "\n",
     "> The method `len()` returns the number of elements in the tuple.\n",
     "\n",
     "For example:"
@@ -133,9 +129,9 @@
    "outputs": [],
    "source": [
     "# Run the Code\n",
-    "my_tuple = (1,2,3,4,5)\n",
+    "my_tuple = (1, 2, 3, 4, 5)\n",
     "\n",
-    "len(my_tuple)"
+    "len(tuple1)"
    ]
   },
   {
@@ -145,6 +141,7 @@
    },
    "source": [
     "### `count()`\n",
+    "\n",
     "> The method `count()` returns count of how many times the `obj` occurs in tuple.\n",
     "\n",
     "For example:"
@@ -154,7 +151,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -169,6 +166,7 @@
    "metadata": {},
    "source": [
     "### `index()`\n",
+    "\n",
     "> The method `index()` returns the __lowest index__ in a tuple that the `obj` appears.\n",
     "\n",
     "For example:"
@@ -178,7 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
