--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.1 Variables\n",
+    "# Variables\n",
     "\n",
     "Variables are reserved memory locations to store values.\n",
     "Every variable in Python is an object."
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1.1 Identifier Naming Rules\n",
+    "## 6.1 Identifier Naming Rules\n",
     "\n",
     "- (a) Variables names must start with a letter or an underscore, such as:\n",
     "    - variable\n",
@@ -74,25 +74,15 @@
     "- (c) Names are case sensitive. The examples below are each, a different variable:\n",
     "    - case_sensitive\n",
     "    - CASE_SENSITIVE\n",
-    "    - case_Sensitive "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>NOTE</b>: Avoid abbreviating variable names.\n",
+    "    - case_Sensitive \n",
     "\n",
-    "> When you see a variable called <b>`balance_sheet_decrease`</b>, it’s much easier to interpret in your mind than an abbreviated variable like <b>`bsd`</b> or <b>`bal_s_d`</b>.\n",
+    "__NOTE__: Avoid abbreviating variable names.\n",
     "\n",
-    ">These types of shortcuts may save a few seconds of typing, but that savings comes at the expense of hours or days of technical debt. It’s not worth it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.2 Reserved Words\n",
+    "> When you see a variable called __`balance_sheet_decrease`__, it’s much easier to interpret in your mind than an abbreviated variable like __`bsd`__ or __`bal_s_d`__.\n",
+    "\n",
+    ">These types of shortcuts may save a few seconds of typing, but that savings comes at the expense of hours or days of technical debt. It’s not worth it.\n",
+    "\n",
+    "## 6.2 Reserved Words\n",
     "\n",
     "The following identifiers are used as reserved words, or keywords of the language, and __cannot__ be used as ordinary identifiers. They must be spelled exactly as written here:"
    ]
@@ -118,21 +108,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1.3 Naming Conventions\n",
+    "## 6.3 Naming Conventions\n",
     "\n",
     ">Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
     "\n",
     "\n",
     "1. Readability is very important.\n",
     "2. Descriptive names are very useful\n",
-    "3. Avoid using the lowercase letter ‘l’, uppercase ‘O’, and uppercase ‘I’. Why? Because the l and the I look a lot like each other and the number 1. And O looks a lot like 0."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.4 Multiple Assignment\n",
+    "3. Avoid using the lowercase letter ‘l’, uppercase ‘O’, and uppercase ‘I’. Why? Because the l and the I look a lot like each other and the number 1. And O looks a lot like 0.\n",
+    "\n",
+    "## 6.4 Multiple Assignment\n",
     "\n",
     "Python allows you to assign a single value to several variables simultaneously."
    ]
@@ -159,13 +144,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1.4.1 Re-assigning of Variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 6.4.1 Re-assigning of Variables\n",
+    "\n",
     "Python also allows assignment of multiple variables simultaneously."
    ]
   },
@@ -191,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
+    "## 6.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
     "\n",
     "\n",
     "All comparison operations in Python have the same priority, which is lower than that of any arithmetic, shifting or bitwise operation. \n",
@@ -200,15 +180,9 @@
     "\n",
     "Comparisons can be chained arbitrarily, e.g., __`x < y <= z`__ is equivalent to __`x < y`__ and __`y <= z`__, except that __`y`__ is evaluated only once (but in both cases __`z`__ is not evaluated at all when __`x < y`__ is found to be false).\n",
     "\n",
+    "![Beginner_2](./images/img_comparison_chaining.png)\n",
     "\n",
-    "![Beginner_2](./images/img_comparison_chaining.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.6 Data Types\n",
+    "## 6.6 Data Types\n",
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
@@ -241,14 +215,9 @@
     "- string\n",
     "- tuple\n",
     "- frozen set\n",
-    "- bytes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 6.1.6.1. Numbers (immutable)\n",
+    "- bytes\n",
+    "\n",
+    "### 1. Numbers (immutable)\n",
     "\n",
     "Number data types store numeric values. Number objects are created when you assign a value to them. \n",
     "\n",
@@ -279,14 +248,9 @@
     "\n",
     " - float (floating point real values)\n",
     "\n",
-    " - complex (complex numbers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Beginner_2](./images/img_numeric_types.png)\n",
+    " - complex (complex numbers)\n",
+    " \n",
+    " ![Beginner_2](./images/img_numeric_types.png)\n",
     "\n",
     "- Python allows you to use a lowercase L with long, but it is recommended that you use only an uppercase L to avoid confusion with the number 1. Python displays long integers with an uppercase L.\n",
     "\n",
@@ -298,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1.6.2.  String (immutable)\n",
+    "### 2. String (immutable)\n",
     "\n",
     "- Strings in Python are identified as a contiguous set of characters represented in the quotation marks. \n",
     "\n",
@@ -380,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1.6.3.  List (mutable)\n",
+    "### 3. List (mutable)\n",
     "\n",
     "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets (__`[]`__).\n",
     "\n",
@@ -440,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1.6.4.  Tuples (immutable)\n",
+    "### 4. Tuples (immutable)\n",
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
@@ -474,13 +438,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1.6.5.  Dictionary (mutable)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### 5. Dictionary (mutable)\n",
+    "\n",
     "Python's dictionaries are kind of hash table type. They work like associative arrays or hashes found in Perl and consist of key-value pairs. A dictionary key can be almost any Python type, but are usually numbers or strings. Values, on the other hand, can be any arbitrary Python object.\n",
     "\n",
     "Dictionaries are enclosed by curly braces (__`{}`__) and values can be assigned and accessed using square braces (__`[]`__). \n",
@@ -516,14 +475,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries have <b>no concept of order</b> among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.7 Namespace\n",
+    "Dictionaries have __no concept of order__ among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered.\n",
+    "\n",
+    "## 6.7 Namespace\n",
     "\n",
     "Generally speaking, a namespace (sometimes also called a context) is a naming system for making names unique to avoid ambiguity. \n",
     "\n",
@@ -576,7 +530,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
