--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.7 Dictionaries\n",
+    "# 6.6 Dictionaries\n",
     "\n",
     "> Dictionaries are Python's built-in associative data type. A dictionary is made of __key-value pairs__ where each key corresponds to a value. Like sets, __dictionaries are unordered__. \n",
     "\n",
@@ -108,14 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries are useful for things like phone books (pairing a name with a phone number), login pages like pairing a username with a password, and lots more."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7.1 Accessing Values in a Dictionary\n",
+    "Dictionaries are useful for things like phone books (pairing a name with a phone number), login pages like pairing a username with a password, and lots more.\n",
+    "\n",
+    "## 6.6.1 Accessing Values in a Dictionary\n",
     "\n",
     "To access dictionary elements, you can use the familiar square brackets along with the key to obtain its value. "
    ]
@@ -179,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.7.2 Adding New Entries\n",
+    "## 6.6.2 Adding New Entries\n",
     "\n",
     "Dictionaries are \"mutable\" which means they can be changed after they are created. We can add new key/value pairs to the dictionary. \n",
     "\n",
@@ -253,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.7.3 Changing the Entries\n",
+    "## 6.6.3 Changing the Entries\n",
     "\n",
     "A new value can be associated with a key by assigning a value to the key."
    ]
@@ -297,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.7.4 Deleting Entries\n",
+    "## 6.6.4 Deleting Entries\n",
     "\n",
     "Items can be removed from a dictionary with the __`del`__ statement.\n",
     "\n",
@@ -348,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.7.5 Other methods\n",
+    "## 6.6.5 Other methods\n",
     "\n",
     "### `len()`\n",
     "\n",
