--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -325,7 +325,7 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "<b>(1) Display Apple, Banana, and Orange </b>"
+    "(1) Display Apple, Banana, and Orange"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>(2) Display the list in its reverse order </b>"
+    "(2) Display the list in its reverse order"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>(3) Add one more fruit of your choice on the list and display all of them </b>\n"
+    "(3) Add one more fruit of your choice on the list and display all of them\n"
    ]
   },
   {
