--- a/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
@@ -27,56 +27,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2.1 Numeric Types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 6.2.1 Numeric Types\n",
+    "\n",
     "#### a. int (signed integers)\n",
     "\n",
-    "They are often called just integers or ints, are positive or negative whole numbers with __NO__ decimal point."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "They are often called just integers or ints, are positive or negative whole numbers with __NO__ decimal point.\n",
+    "\n",
     "#### b. long (long integers)\n",
     "\n",
-    "Also called longs, they are integers of unlimited size, written like integers and followed by an uppercase or lowercase L."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Also called longs, they are integers of unlimited size, written like integers and followed by an uppercase or lowercase L.\n",
+    "\n",
     "#### c. float (floating point real values) \n",
     "\n",
-    "Also called floats, they represent real numbers and are written with a decimal point dividing the integer and fractional parts. Floats may also be in scientific notation, with E or e indicating the power of 10 (2.5e2 = 2.5 x 102 = 250)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Also called floats, they represent real numbers and are written with a decimal point dividing the integer and fractional parts. Floats may also be in scientific notation, with E or e indicating the power of 10 (2.5e2 = 2.5 x 102 = 250).\n",
+    "\n",
     "#### d. complex (complex numbers) \n",
     "\n",
-    "Complex numbers are of the form a + bJ, where a and b are floats and J (or j) represents the square root of -1 (which is an imaginary number). The real part of the number is a, and the imaginary part is b. Complex numbers are not used much in Python programming."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Beginner_2](./images/img_numeric_types.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Complex numbers are of the form a + bJ, where a and b are floats and J (or j) represents the square root of -1 (which is an imaginary number). The real part of the number is a, and the imaginary part is b. Complex numbers are not used much in Python programming.\n",
+    "\n",
+    "![Beginner_2](./images/img_numeric_types.png)\n",
+    "\n",
     "## 6.2.2 min( )\n",
     "\n",
     "- The smallest of its arguments: the value closest to negative infinity. \n",
