Minor fix: Spelling and Markdown

--- a/Intermediate_1/12. Basics of OOP in Python.ipynb
+++ b/Intermediate_1/12. Basics of OOP in Python.ipynb
@@ -412,7 +412,7 @@
     "\n",
     "The new class inherits from all derived classes, __from left to right__, subject to the method resolution order. The MRO uses a linearization algorithm that is stable and consistent.\n",
     "\n",
-    "The importance of the method resolution order becomes more apparent when dealing with multiple inheritance as well as when using of the super() function.\n",
+    "The importance of the method resolution order becomes more apparent when dealing with multiple inheritance as well as when using of the `super()` function.\n",
     "\n",
     "Let's create a new `OurClass` that derives from both `MyClass` and `YourClass`."
    ]
@@ -513,7 +513,7 @@
    "source": [
     "## 12.6 Super\n",
     "\n",
-    "There are times when we want to access the class ancestor's attributes. We might want to maintain the original functionality but modify it just a bit, but not rewrite the code. The super() function allows us to do exactly this. Consider the next example:"
+    "There are times when we want to access the class ancestor's attributes. We might want to maintain the original functionality but modify it just a bit, but not rewrite the code. The `super()` function allows us to do exactly this. Consider the next example:"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The super() function is not restricted to your current object. You can use super on any of your object's parents or derived classes and on their methods. In the next example, note how we are using super on the object we are inheriting from."
+    "The `super()` function is not restricted to your current object. You can use super on any of your object's parents or derived classes and on their methods. In the next example, note how we are using super on the object we are inheriting from."
    ]
   },
   {
@@ -580,7 +580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our example used the echo() method of our object's \"grandfather\", not it's parent's echo() method."
+    "Our example used the `echo()` method of our object's \"grandfather\", not it's parent's `echo()` method."
    ]
   },
   {
@@ -654,7 +654,7 @@
    "source": [
     "### Bringing it all together\n",
     "\n",
-    "This notebook discussed several topics related to objects, from language-defined variables, single inheritance to multiple inheritance, to required, default and optional as well as starred arguments/keyword arguments, and some uses of the super() function. Each of the examples can easily be translated to real-life examples.\n",
+    "This notebook discussed several topics related to objects, from language-defined variables, single inheritance to multiple inheritance, to required, default and optional as well as starred arguments/keyword arguments, and some uses of the `super()` function. Each of the examples can easily be translated to real-life examples.\n",
     "\n",
     "You might consider using star arguments/keyword arguments pattern for high inter-operability with other objects while limiting the required knowledge about them. You will also find that methods that use this are easier to work with while letting data flow through an application. This pattern is common in mature frameworks.\n",
     "\n",
