--- a/Intermediate_1/13. Importing Modules.ipynb
+++ b/Intermediate_1/13. Importing Modules.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "> Within a module, the module’s name (as a string) is available as the value of the global variable `__name__`.\n",
     "\n",
-    "`__name__`, and all other variables surounded by double underlines, are special variables defined by Python.\n",
+    "`__name__`, and all other variables surrounded by double underlines, are special variables defined by Python.\n",
     "\n",
     "In our example, we imported `os` and used `os.path`. We can specifically import `path` without importing the whole of `os` by prefixing our import statement with `from`."
    ]
