--- a/Intermediate_3/18.2 Peewee.ipynb
+++ b/Intermediate_3/18.2 Peewee.ipynb
@@ -414,6 +414,32 @@
     "# In your controller - querying\n",
     "bob = User.get(User.name=='Bob')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "\n",
+    "Now that you have learned SQLAlchemy and PeeWee it's time for an exercise.\n",
+    "\n",
+    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages, accept input and uses WTForms to validate and handle forms.\n",
+    "\n",
+    "- Use your ORM of choice between SQLAlchemy and Peewee\n",
+    "- Add a database\n",
+    "\n",
+    "- In the admin, add the capability to post products\n",
+    "- Adjust your page to show a list of products\n",
+    "\n",
+    "Next level would be the capability to add other users to your app. With you as \"Superuser\", you have the capability to manage other users.\n",
+    "\n",
+    "- Add and deactivate/activate other users\n",
+    "- Users have ther own page\n",
+    "- Users can post their own products\n",
+    "- Users can only see their own page products\n",
+    "\n",
+    "Congratulations! You can now build apps in Python."
+   ]
   }
  ],
  "metadata": {
