Done with Beginner_1

--- a/Beginner_1/0. Hello, World.ipynb
+++ b/Beginner_1/0. Hello, World.ipynb
@@ -43,13 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, I'm Max Carolino\n"
+     ]
+    }
+   ],
    "source": [
     "#Write your code below\n",
+    "print(\"Hi, I'm Max Carolino\")\n",
     "\n",
     "\n",
     "\n",
