--- a/Beginner_1/1. Introspection.ipynb
+++ b/Beginner_1/1. Introspection.ipynb
@@ -59,11 +59,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on int object:\n",
+      "\n",
+      "class int(object)\n",
+      " |  int(x=0) -> integer\n",
+      " |  int(x, base=10) -> integer\n",
+      " |  \n",
+      " |  Convert a number or string to an integer, or return 0 if no arguments\n",
+      " |  are given.  If x is a number, return x.__int__().  For floating point\n",
+      " |  numbers, this truncates towards zero.\n",
+      " |  \n",
+      " |  If x is not a number or if base is given, then x must be a string,\n",
+      " |  bytes, or bytearray instance representing an integer literal in the\n",
+      " |  given base.  The literal can be preceded by '+' or '-' and be surrounded\n",
+      " |  by whitespace.  The base defaults to 10.  Valid bases are 0 and 2-36.\n",
+      " |  Base 0 means to interpret the base from the string as an integer literal.\n",
+      " |  >>> int('0b100', base=0)\n",
+      " |  4\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __abs__(self, /)\n",
+      " |      abs(self)\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __and__(self, value, /)\n",
+      " |      Return self&value.\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      self != 0\n",
+      " |  \n",
+      " |  __ceil__(...)\n",
+      " |      Ceiling of an Integral returns itself.\n",
+      " |  \n",
+      " |  __divmod__(self, value, /)\n",
+      " |      Return divmod(self, value).\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __float__(self, /)\n",
+      " |      float(self)\n",
+      " |  \n",
+      " |  __floor__(...)\n",
+      " |      Flooring an Integral returns itself.\n",
+      " |  \n",
+      " |  __floordiv__(self, value, /)\n",
+      " |      Return self//value.\n",
+      " |  \n",
+      " |  __format__(...)\n",
+      " |      default object formatter\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getnewargs__(...)\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __index__(self, /)\n",
+      " |      Return self converted to an integer, if self is suitable for use as an index into a list.\n",
+      " |  \n",
+      " |  __int__(self, /)\n",
+      " |      int(self)\n",
+      " |  \n",
+      " |  __invert__(self, /)\n",
+      " |      ~self\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lshift__(self, value, /)\n",
+      " |      Return self<<value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mod__(self, value, /)\n",
+      " |      Return self%value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __neg__(self, /)\n",
+      " |      -self\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |  \n",
+      " |  __pos__(self, /)\n",
+      " |      +self\n",
+      " |  \n",
+      " |  __pow__(self, value, mod=None, /)\n",
+      " |      Return pow(self, value, mod).\n",
+      " |  \n",
+      " |  __radd__(self, value, /)\n",
+      " |      Return value+self.\n",
+      " |  \n",
+      " |  __rand__(self, value, /)\n",
+      " |      Return value&self.\n",
+      " |  \n",
+      " |  __rdivmod__(self, value, /)\n",
+      " |      Return divmod(value, self).\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __rfloordiv__(self, value, /)\n",
+      " |      Return value//self.\n",
+      " |  \n",
+      " |  __rlshift__(self, value, /)\n",
+      " |      Return value<<self.\n",
+      " |  \n",
+      " |  __rmod__(self, value, /)\n",
+      " |      Return value%self.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |  \n",
+      " |  __round__(...)\n",
+      " |      Rounding an Integral returns itself.\n",
+      " |      Rounding with an ndigits argument also returns an integer.\n",
+      " |  \n",
+      " |  __rpow__(self, value, mod=None, /)\n",
+      " |      Return pow(value, self, mod).\n",
+      " |  \n",
+      " |  __rrshift__(self, value, /)\n",
+      " |      Return value>>self.\n",
+      " |  \n",
+      " |  __rshift__(self, value, /)\n",
+      " |      Return self>>value.\n",
+      " |  \n",
+      " |  __rsub__(self, value, /)\n",
+      " |      Return value-self.\n",
+      " |  \n",
+      " |  __rtruediv__(self, value, /)\n",
+      " |      Return value/self.\n",
+      " |  \n",
+      " |  __rxor__(self, value, /)\n",
+      " |      Return value^self.\n",
+      " |  \n",
+      " |  __sizeof__(...)\n",
+      " |      Returns size in memory, in bytes\n",
+      " |  \n",
+      " |  __str__(self, /)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  __sub__(self, value, /)\n",
+      " |      Return self-value.\n",
+      " |  \n",
+      " |  __truediv__(self, value, /)\n",
+      " |      Return self/value.\n",
+      " |  \n",
+      " |  __trunc__(...)\n",
+      " |      Truncating an Integral returns itself.\n",
+      " |  \n",
+      " |  __xor__(self, value, /)\n",
+      " |      Return self^value.\n",
+      " |  \n",
+      " |  bit_length(...)\n",
+      " |      int.bit_length() -> int\n",
+      " |      \n",
+      " |      Number of bits necessary to represent self in binary.\n",
+      " |      >>> bin(37)\n",
+      " |      '0b100101'\n",
+      " |      >>> (37).bit_length()\n",
+      " |      6\n",
+      " |  \n",
+      " |  conjugate(...)\n",
+      " |      Returns self, the complex conjugate of any int.\n",
+      " |  \n",
+      " |  from_bytes(...) from builtins.type\n",
+      " |      int.from_bytes(bytes, byteorder, *, signed=False) -> int\n",
+      " |      \n",
+      " |      Return the integer represented by the given array of bytes.\n",
+      " |      \n",
+      " |      The bytes argument must be a bytes-like object (e.g. bytes or bytearray).\n",
+      " |      \n",
+      " |      The byteorder argument determines the byte order used to represent the\n",
+      " |      integer.  If byteorder is 'big', the most significant byte is at the\n",
+      " |      beginning of the byte array.  If byteorder is 'little', the most\n",
+      " |      significant byte is at the end of the byte array.  To request the native\n",
+      " |      byte order of the host system, use `sys.byteorder' as the byte order value.\n",
+      " |      \n",
+      " |      The signed keyword-only argument indicates whether two's complement is\n",
+      " |      used to represent the integer.\n",
+      " |  \n",
+      " |  to_bytes(...)\n",
+      " |      int.to_bytes(length, byteorder, *, signed=False) -> bytes\n",
+      " |      \n",
+      " |      Return an array of bytes representing an integer.\n",
+      " |      \n",
+      " |      The integer is represented using length bytes.  An OverflowError is\n",
+      " |      raised if the integer is not representable with the given number of\n",
+      " |      bytes.\n",
+      " |      \n",
+      " |      The byteorder argument determines the byte order used to represent the\n",
+      " |      integer.  If byteorder is 'big', the most significant byte is at the\n",
+      " |      beginning of the byte array.  If byteorder is 'little', the most\n",
+      " |      significant byte is at the end of the byte array.  To request the native\n",
+      " |      byte order of the host system, use `sys.byteorder' as the byte order value.\n",
+      " |      \n",
+      " |      The signed keyword-only argument determines whether two's complement is\n",
+      " |      used to represent the integer.  If signed is False and a negative integer\n",
+      " |      is given, an OverflowError is raised.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  denominator\n",
+      " |      the denominator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  imag\n",
+      " |      the imaginary part of a complex number\n",
+      " |  \n",
+      " |  numerator\n",
+      " |      the numerator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  real\n",
+      " |      the real part of a complex number\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "n = 1\n",
     "help(n)"
@@ -103,11 +348,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = \"string\"\n",
     "dir(s)"
