--- a/Beginner_1/3. Simple and Compound Statements.ipynb
+++ b/Beginner_1/3. Simple and Compound Statements.ipynb
@@ -73,11 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We got 100\n"
+     ]
+    }
+   ],
    "source": [
     "var1 = 100\n",
     "\n",
